# Rhadamanthus

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  Requirements.md  Scenarios.md  Setup.md  TODO.md  conanfile.py  state_task.c
archive/: breakpoint-emulate-example.c  breakpoint-recoil-example.c  cpuid.c  cr3-event-example.c  descriptor-event-example.c  dmesg.c  dump-memory.c  event-example.c  fool-patchguard.c  ftrace-ops.c  interrupt-event-example.c  io-event-example.c  linux-offsets.c  map-addr.c  map-symbol.c  mem-event-example.c  module-list.c  msr-event-example.c  new-physical-page-example.c  process-list.c  read-disk-example.c  rwmem.c  singlestep-event-example.c  step-event-example.c  switch-view-example.c  va-pages.c  wait-for-domain-example.c  xen-emulate-response.c
archive/cloud_integrity/: api_invoke.c  driverapi-trace.c  idt-check.c  kernel-integrity-check.c  module-list.c  network-check.c  process-kill.c  process-list.c  procfs-check.c  sleepapi-nop.c  socketapi-trace.c  syscall-check.c  syscall-trace.c  vmi.c  vmi.h
benchmark/: Benchmark.md
cloud_integrity/: network-check.c  process-list.c  procfs-check.c  socketapi-trace.c  syscall-check.c  vmi  vmi.h
config/: Doxyfile  README.md  libvmi.conf  libvmi_comments.conf  settings_schema.yaml
data/: README.md
docs/html/: annotated.html  classes.html  code__section__modify_8h.html  code__section__modify_8h__incl.map  code__section__modify_8h__incl.md5  code__section__modify_8h_source.html  code__section__modify__response_8h.html  code__section__modify__response_8h__incl.map  code__section__modify__response_8h__incl.md5  code__section__modify__response_8h_source.html  config__parser_8h_source.html  constants_8h_source.html  cpuid__invoke_8h.html  cpuid__invoke_8h_source.html  cr0__write_8h.html  cr0__write_8h__incl.map  cr0__write_8h__incl.md5  cr0__write_8h_source.html  cr0__write__response_8h.html  cr0__write__response_8h__incl.map  cr0__write__response_8h__incl.md5  cr0__write__response_8h_source.html  dir_000001_000003.html  dir_000009_000003.html  dir_000010_000003.html  dir_000012_000003.html  dir_000014_000003.html  dir_000015_000003.html  dir_24e7089242ec30e54964a34eb28d3180.html  dir_24e7089242ec30e54964a34eb28d3180_dep.map  dir_24e7089242ec30e54964a34eb28d3180_dep.md5  dir_27f29651b6edc4a8fb34a9b5c1beea47.html  dir_27f29651b6edc4a8fb34a9b5c1beea47_dep.map  dir_27f29651b6edc4a8fb34a9b5c1beea47_dep.md5  dir_2aaf3423130ba4f4a17610ee0e4cbf8f.html  dir_2aaf3423130ba4f4a17610ee0e4cbf8f_dep.map  dir_2aaf3423130ba4f4a17610ee0e4cbf8f_dep.md5  dir_47435408a6053d688929c09c3234f5b7.html  dir_47435408a6053d688929c09c3234f5b7_dep.map  dir_47435408a6053d688929c09c3234f5b7_dep.md5  (+403 more)
examples/: cpuid.c  dump-memory.c  linux-offsets.c  module-list.c  msr-event-example.c  process-list.c  read-disk-example.c
include/: callback_handler.h  config_parser.h  dispatcher.h  event_handler.h  event_task_map.h  interrupt_context.h  json_serializer.h  offsets.h  response.h  serializer.h  state_task_map.h  utils.h
include/event_callbacks/: code_section_modify.h  cpuid_invoke.h  cr0_write.h  ebpf_map_update.h  ebpf_probe.h  ebpf_tracepoint.h  ftrace_hook.h  idt_write.h  io_uring_ring_write.h  kallsyms_table_write.h  kprobe.h  msr_write.h  netfilter_hook_write.h  network_monitor.h  page_table_modification.h  syscall_table_write.h
include/responses/: event_cr0_response.h  response.h
include/state_callbacks/: credentials.h  dir_string_matching.h  ebpf_activity.h  ebpf_artifacts.h  firmware_acpi_hooks.h  ftrace_hooks.h  idt_table.h  io_uring_artifacts.h  kallsyms_symbols.h  kernel_code_integrity_check.h  kernel_module_list.h  kernel_threads.h  kprobes_jprobes_kretprobes.h  module_list.h  msr_registers.h  netfilter_hooks.h  network_trace.h  process_list.h  procfs_artifacts.h  syscall_table.h
scenarios/: Details.md  Scenarios.md  prepare_scenario.sh
scenarios/config/: badbpf.yaml  diamorphine.yaml  ftrace-lkm.yaml  io-uring.yaml
scripts/: calculate_hash_kernel  calculate_hash_kernel.c  create_event_files.sh  create_files.sh  create_state_files.sh  enable_tty_guest.sh  enable_tty_host.sh  install_essentials.sh  kernel_install_dbg.sh  kernel_install_downgrade.sh  pahole_io_uring.sh  pahole_nf.sh  pahole_rb.sh  transfer_files_mount_lvm.sh  xen_nat.sh
src/: .clang-format  Makefile  callback_handler.c  config_parser.c  cpuid.c  dispatcher.c  driverapi-trace.c  dump-memory.c  event_handler.c  event_task_map.c  idt-check.c  interrupt_context.c  json_serializer.c  kernel-integrity-check.c  main.c  mem-event-example.c  process-block.c  process-kill.c  process-list.c  procfs-check.c  response.c  sleepapi-nop.c  socketapi-trace.c  state_task_map.c  syscall-check.c  syscall-trace.c  utils.c  va-pages.c  vmi
src/event_callbacks/: code_section_modify.c  cpuid_invoke.c  cr0_write.c  ebpf_map_update.c  ebpf_probe.c  ebpf_tracepoint.c  ftrace_hook.c  idt_write.c  io_uring_ring_write.c  kallsyms_table_write.c  kprobe.c  msr_write.c  netfilter_hook_write.c  network_monitor.c  page_table_modification.c  syscall_table_write.c
src/examples/: breakpoint-emulate-example.c  event-example.c  ftrace-ops.c
src/responses/: response.c
src/src/: Makefile  api_invoke.c  driverapi-trace.c  module-list.c  network-check.c  process-list.c  syscall-trace.c  utils.c  utils.h  vmi.c  vmi.h
src/state_callbacks/: credentials.c  dir_string_matching.c  ebpf_activity.c  ebpf_artifacts.c  firmware_acpi_hooks.c  ftrace_hooks.c  idt_table.c  io_uring_artifacts.c  kallsyms_symbols.c  kernel_code_integrity_check.c  kernel_module_list.c  kernel_threads.c  kprobes_jprobes_kretprobes.c  module_list.c  msr_registers.c  netfilter_hooks.c  network_trace.c  process_list.c  procfs_artifacts.c  syscall_table.c
tests/: test_config_parser.c  test_cr0_write.c  test_dispatcher.c  test_event_handler.c  test_state_callbacks_idt_table.c  test_state_callbacks_kernel_module_list.c  test_state_callbacks_syscall_table.c  test_utils.c  test_utils.h
tests/data/: interrupt_test  valid.yaml
tests/include/: test_utils.h
(+169 files in other folders)
